Changed Database structure to more propriate way(book and author relationship)

--- a/apps/books_app/templates/books_app/index.html
+++ b/apps/books_app/templates/books_app/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        {{request.session.user.id}}}{{request.session.user.full_name}}{{request.session.user.email}}
+        {{request.session.user.id}}{{request.session.user.full_name}}{{request.session.user.email}}
         
         {% if messages %}
             {% for message in messages %}
