Quote Project using django and database

--- a/apps/users_app/templates/users_app/index.html
+++ b/apps/users_app/templates/users_app/index.html
@@ -55,6 +55,7 @@
             Email:<input type="email" name="email" class="form-control"> 
             Password:<input type="password" name="password" minlength="8" class="form-control"> 
             Confirm Password:<input type="password" name="confirm_pw" class="form-control">
+            Date of Birth<input type="Date" name="dob" class="form-control" required>
             <br>
             <input type="submit" name="Submit" class="btn btn-info">
         </form>
